# ChangeLog for net-print/cnijfilter
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cnijfilter-2.80-r1 (13 Oct 2010)

  13 Oct 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cnijfilter-2.80-r1.ebuild:
  Added cnijfilter-2.80

*cnijfilter-3.20-r1 (29 Mar 2010)

  29 Mar 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cnijfilter-3.20.ebuild, +cnijfilter-3.20-r1.ebuild:
  net-print/cnijfilter-3.20-r1.ebuild depends on app-text/ghostscript-gpl
  instead of virtual/ghostscript.
