@@ -1,7 +1,12 @@
 #
 app-admin/testdisk ntfs reiserfs
 dev-vcs/git -gtk perl
+
+#fot 3.20
 net-print/cnijfilter ip4700 mp250 mp270 mp490 mp550 mp560 mp64
+#for 3.50
+net-print/cnijfilter net mx360 mx410 mx420 mx880
+
 media-gfx/splashutils fbcondecor
 net-fs/samba quota
 sys-fs/aufs2 inotify kernel-patch
