@@ -1,6 +1,12 @@
 # ChangeLog for net-print/cnijfilter
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cnijfilter-3.50 (01 Nov 2011)
+
+  01 Nov 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +cnijfilter-3.50.ebuild:
+  version bump
 
 *cnijfilter-2.80-r1 (13 Oct 2010)
 
